=== ongoing ===

=== 0.2.1 ===

- added is_published filtering to cmsplugin

=== 0.2 ===

- added is_published field

=== 0.1 ===

Initial commit