@@ -5,7 +5,9 @@
 # ===========================================================================
 django==1.4.3
 django-cms==2.3.5
+django-filer==0.9.4
 South==0.7.6
+Pillow==1.7.8
 
 
 # ==============================================================
